--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ cython_debug/
 
 
 .gitignore
+.vscode/extensions.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/settings.json
+.gitignore
