--- a/.github/workflows/main_fetcheta.yml
+++ b/.github/workflows/main_fetcheta.yml
@@ -5,9 +5,9 @@
 name: Build and deploy Python project to Azure Function App - fetcheta
 
 on:
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
