disabled oryx build

--- a/.github/workflows/main_fetcheta.yml
+++ b/.github/workflows/main_fetcheta.yml
@@ -72,4 +72,4 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_26AF3006B37845E788204271DD4AF358 }}
           scm-do-build-during-deployment: true
-          enable-oryx-build: true
+          enable-oryx-build: false
