--- a/.github/workflows/main_fetcheta.yml
+++ b/.github/workflows/main_fetcheta.yml
@@ -71,5 +71,5 @@ jobs:
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_26AF3006B37845E788204271DD4AF358 }}
-          scm-do-build-during-deployment: false
+          scm-do-build-during-deployment: true
           enable-oryx-build: false
